# hooks

./: .ghcid  README.md  hooks.cabal
app/: Main.hs  RepoSync.hs
