cabal-version:      3.0
name:               hooks
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cordcivilian
maintainer:         public@cordcivilian.com
build-type:         Simple
extra-doc-files:    README.md

executable hooks
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base ^>=4.20.0.0
                    , SHA
                    , aeson
                    , bytestring
                    , directory
                    , filepath
                    , http-conduit
                    , http-types
                    , network-uri
                    , process
                    , text
                    , time
                    , unix
                    , unix
                    , wai
                    , wai-extra
                    , warp
                    , yaml
  default-language: Haskell2010
  ghc-options:      -rtsopts
                    -with-rtsopts=-N
                    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-home-modules
                    -Wpartial-fields
                    -Wredundant-constraints
                    -threaded
                    -O2
